# Janus

./: .dockerignore  .gitattributes  .gitignore  .janus_key  ADDITIONAL_OPTIMIZATIONS.md  ADVANCED_DECIDER_SYSTEM.md  ADVANCED_SELF_IMPROVEMENT_CONCEPT.md  ANALYSIS_COMPARISON.md  ANALYSIS_SUMMARY.md  ANSWER_HUMAN_BEHAVIOR.md  AUTONOMOUS_GAME_DEV.md  App.tsx  App.tsx.backup  CEO_README.md  CORE_FIXES_SUMMARY.md  CRITICAL_FILES_INVENTORY.md  CURRENT_STATUS.md  CURRENT_STATUS_SUMMARY.md  Cargo.toml  Credentials.env  Credintials - Copy.env  DELIVERY_SUMMARY.txt  DEVELOPMENT_TOOLS_ANALYSIS.md  Database.txt  Database_second_attempt.txt  Dockerfile  FINAL_PERFORMANCE_SUMMARY.md  FINAL_STATUS.md  FINAL_SUMMARY.md  GIT_COMMIT_SUMMARY.md  GIT_PUSH_SUMMARY.md  HOLOGRAPHIC_INTEGRATION.md  HONEST_ASSESSMENT.md  HUMAN_BEHAVIOR_ANALYSIS.md  HUMAN_BEHAVIOR_FIXES.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_COMPLETE.md  INSTALLATION_STATUS.md  INSTALL_MISSING_TOOLS.md  (+520 more)
.kiro_tmp/: test_results.txt
archive/: cognitive_loop.py  janus_capability_hub.py  janus_core.py  memory.py  updated_cognitive_loop.py  web_autonomy.py
assets/: Arania.mat  arania_body.mat.json  arania_body.mtl
core/: config.json  config.py  model.py
crates/janus-cli/: Cargo.toml
crates/janus-cli/src/: main.rs
demo_artifacts/: index.json
electron/: main.js  preload.js
game_ai_database/: __init__.py  config.py  main.py  requirements.txt
holographic_brain_memory/: __init__.py  core.py  real_valued.py  spawning.py  visualization.py
hooks/: useVeo.ts
human_dataset/: generate_human_dataset.py
janus-brain/: setup.py
janus_dependency_analyzer/: __main__.py  cli.py
janus_reasoning_engine/: README.md  TASK_1_SUMMARY.md  TASK_2_1_SUMMARY.md  TASK_2_2_SUMMARY.md  TASK_2_3_SUMMARY.md  TASK_2_4_SUMMARY.md  __init__.py  cli.py  engine.py
jmaxing_app/: ARCHITECTURE.md  COMPLETION_SUMMARY.md  PROJECT_COLLABORATION.md  QUICKSTART.md  README.md  SOCIAL_FEATURES.md  index.html  package.json  tailwind.config.js  vite.config.ts
jmaxing_backend/: .env.example  README.md  main.py  requirements.txt
mesh_isp_dashboard/: CallMeButton.tsx  ComponentShowcase.tsx  DashboardLayout.tsx  ErrorBoundary.tsx  JanusPWA.tsx  MeshChat.tsx  SETUP_INSTRUCTIONS.md  STANDALONE_README.md  auth.bcrypt.ts  auth.ts  bandwidth-throttle.ts  imageGeneration.ts  isp.test.ts  isp.ts  janusNotify.ts  janusRelay.ts  label.tsx  meshchat-manifest.json  meshchat-sw.js  meshchat-version.json  notifyEndpoint.ts  oauth.ts  package.json  pushServer.ts  scroll-area.tsx  sheet.tsx  todo.md  trpc.ts  vite.ts  voipEndpoint.ts  windows-hotspot.ts
my-llm-project/: Dockerfile
nvme_engine/: __init__.py
oss-game-engine/: Cargo.toml
oss-game-engine/engine-runtime/: Cargo.toml
oss-game-engine/engine-runtime/src/: arania_controller.rs  desktop_capture.rs  lib.rs  overlay.rs
schemas/: observe.json  plan.json  propose.json  reflect.json
services/: aiServiceRouter.test.ts  aiServiceRouter.ts  geminiService.ts  localAIService.ts
synthetic_database/: .gitignore  coherence_explanations.md  (+5 more)
(+601 files in other folders)
