[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.41.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nvme-engine"
version = "0.1.0"
description = "Software-defined NVMe device emulation engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Software NVMe Solution" },
]
keywords = ["nvme", "storage", "emulation", "software-defined"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: System :: Filesystems",
]

dependencies = [
    "pyyaml==6.0.2",
    "prometheus-client==0.20.0",
    "cryptography==42.0.8",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "hypothesis==6.108.5",
]

[project.scripts]
nvme-engine = "nvme_engine.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nvme_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["nvme_engine"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
