[package]
name = "janus-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
janus-core = { path = "../janus-core" }
janus-wasm = { path = "../janus-wasm" }
janus-llm = { path = "../janus-llm" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
